--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,6 @@
 server.port=3000
 
-#DB
-# spring.datasource.url=jdbc:postgresql://localhost:5432/said_market
-# spring.datasource.username=postgres
-# spring.datasource.password=Tanjiro.123
-
-spring.datasource.url=${DB_URL}
+spring.datasource.url=jdbc:postgresql://localhost:5432/said_market
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
