--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,10 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'io.github.cdimascio:dotenv-java:3.0.2' 
+	implementation 'io.github.cdimascio:dotenv-java:3.0.2'
 
+	implementation 'org.mapstruct:mapstruct:1.6.2'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'
 
 	runtimeOnly 'org.postgresql:postgresql'
 
