--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,11 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'io.github.cdimascio:dotenv-java:3.0.2'
+
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
 
 	runtimeOnly 'org.postgresql:postgresql'
 
