--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,26 +6,27 @@ on:
       - "main"
 
 jobs:
-  builds:
-    runs-on: ubunu-latest
+  build-and-push:
+    runs-on: ubuntu-latest
     steps:
-    -
+    - 
       name: Checkout
       uses: actions/checkout@v4
-    -
+    - 
       name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    -
-      name: Set up Docker Build
+    - 
+      name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-    -
+    - 
       name: Build and push
       uses: docker/build-push-action@v5
       with:
         context: . 
-        files: ./Dockerfile
+        file: ./Dockerfile
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/SaidMarket:latest
+
