--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,10 @@ jobs:
 
       - name: Build with Gradle
         run: ./gradlew build
+        env:
+          SPRING_DATASOURCE_URL: ${{ secrets.DB_URL}}
+          SPRING_DATASOURCE_USERNAME: ${{ secrets.DB_USERNAME }}
+          SPRING_DATASOURCE_PASSWORD: ${{ secrets.DB_PASSWORD }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
