--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,10 @@ jobs:
           SPRING_DATASOURCE_URL: ${{ secrets.DB_URL}}
           SPRING_DATASOURCE_USERNAME: ${{ secrets.DB_USERNAME }}
           SPRING_DATASOURCE_PASSWORD: ${{ secrets.DB_PASSWORD }}
-
+          
+      - name: List output files
+        run: ls -l build/libs/
+        
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
