--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,9 @@ jobs:
       - name: List output files
         run: ls -l build/libs/
         
+      - name: List JAR files
+        run: ls -l build/libs/
+        
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
