--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,12 @@ jobs:
       - name: List JAR files
         run: ls -l build/libs/
         
+      - name: SQL files for the image
+        run: |
+          mkdir -p ./build/sql
+          cp 1_schema.sql ./build/sql/
+          cp 2_data.sql ./build/sql/
+        
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
